--- a/index.html
+++ b/index.html
@@ -10,40 +10,137 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+	body {
+		font-family: 'Overpass', sans-serif;
+		font: 15px;
+	}
+	.main-container {
+		height: 100%;
+		display: flex;
+		flex: 1;
+		align-items:center;
+		justify-content: center;
+		background: hsl(216, 12%, 8%);
+	}
+	.main-card {
+		width: 350px;
+		height: 350px;
+		display: flex;
+		border-radius: 10%;
+		padding: 10px 30px;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		background: hsl(213, 19%, 18%);
+	}
+	.white-text {
+		color: white;
+	}
+	.circle-container {
+		height: 40px;
+		width: 40px;
+		background-color: hsl(216, 12%, 54%);
+		border-radius: 50%;
+		display: inline-block;
+		position: sticky;
+	}
+	.star {
+		position: absolute;
+		right: 11px;
+		top: 11px;
+	}
+	.numbers {
+		display: flex;
+		margin-bottom: 20px;
+	}
+	.numbers > div {
+		height: 10px;
+		width: 10px;
+		background-color: hsl(216, 12%, 54%);
+		border-radius: 50%;
+		margin: 10px;
+		padding: 22px;
+		font-size: 15px;
+	}
+	.attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+	button {
+		align-items: center;
+		  background-clip: padding-box;
+		  background-color: hsl(25, 97%, 53%);
+		  border: 1px solid transparent;
+		  border-radius: 2.5rem;
+		  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+		  box-sizing: border-box;
+		  color: #fff;
+		  cursor: pointer;
+		  display: inline-flex;
+		  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+		  font-size: 16px;
+		  font-weight: 600;
+		  justify-content: center;
+		  line-height: 1.25;
+		  margin: 0;
+		  min-height: 3rem;
+		  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+		  position: relative;
+		  text-decoration: none;
+		  transition: all 250ms;
+		  user-select: none;
+		  -webkit-user-select: none;
+		  touch-action: manipulation;
+		  vertical-align: baseline;
+		  width: 100%;
+		
+	}
   </style>
 </head>
 <body>
+	<div class="main-container">
+	
+		<!-- Rating state start -->
+	  
+	  <div id="rating-state" class="main-card white-text">
+		
+		  <div>
+			  <div class="circle-container">
+				<img class="star" src="./images/icon-star.svg"/>
+			</div>
+			<h1>How did we do?</h1>
+			<p>Please let us know how we did with your support request. All feedback is appreciated 
+			to help us improve our offering!</p>
+		  </div>
 
-  <!-- Rating state start -->
 
-  How did we do?
+		<!--<p>1 2 3 4 5</p>-->
+		<div class="numbers">
+		  <div>1</div>
+		  <div>2</div>
+		  <div>3</div>
+		  <div>4</div>
+		  <div>5</div>
+		</div>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+		<button>SUBMIT</button>
+	  
+	  </div>
+	  <!-- Rating state end -->
 
-  1 2 3 4 5
+	  <!-- Thank you state start -->
+	  <div id="thank-you-state" style="display: none;">
+		You selected <!-- Add rating here --> out of 5
 
-  Submit
+		  Thank you!
 
-  <!-- Rating state end -->
+		  We appreciate you taking the time to give a rating. If you ever need more support, 
+		  don’t hesitate to get in touch!
+	  </div>
+	  <!-- Thank you state end -->
+	</div>
 
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+	<div class="attribution">
+		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+		Coded by <a href="#">Thato Sithole</a>.
+	</div>
 </body>
 </html>
